--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
     <!-- Fontawesome Icons -->
     <link href="assets/fontawesome/css/all.css" rel="stylesheet"> <!--load all styles -->
     <!-- Jquery  -->
-    <script
+    <!-- <script
   src="https://code.jquery.com/jquery-3.5.1.js"
   integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+  crossorigin="anonymous"></script> -->
+
+  <script
+  src="https://code.jquery.com/jquery-3.6.0.js"
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
+
     <!-- OL-ext CSS -->
     <link rel="stylesheet" href="assets/css/ol-ext.css">
     <!-- OL-ext JS -->
